--- a/cb-web-client/src/styles.scss
+++ b/cb-web-client/src/styles.scss
@@ -1,1 +1,50 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Roboto', sans-serif; }
+
+.cb-sidenav-container {
+  height: 100%;
+  width: 100%;
+}
+
+.cb-sidenav-content {
+  height: 100%;
+}
+
+.cb-sidenav-menu {
+  padding: 10px;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  .menu-logo {
+    padding: 10px;
+    img {
+      max-width: 50px;
+      height: auto;
+    }
+  }
+  .menu-item-description {
+    padding-left: 5px;
+  }
+  .menu-details {
+    padding: 20px 0 0 15px;
+  }
+}
+
+.cb-toolbar {
+  margin: 0;
+  display: flex;
+  flex: 1 1 auto;
+  min-height: 12%;
+  .notification-panel {
+    justify-content: flex-end;
+  }
+}
+
+.cb-main-content {
+  padding: 10px;
+  display: block;
+}
