--- a/cb-web-client/src/app/modules/pages/restaurant-map/restaurant-map.component.html
+++ b/cb-web-client/src/app/modules/pages/restaurant-map/restaurant-map.component.html
@@ -1,1 +1,10 @@
-<div #gmap style="width:100%;height:400px"></div>
+<app-map-search-form></app-map-search-form>
+
+<agm-map [(latitude)]="location.lat" [(longitude)]="location.lng" [(zoom)]="location.zoom" [disableDefaultUI]="true"
+    [zoomControl]="true" [(fitBounds)]='location.viewport'>
+    <agm-marker [(latitude)]="location.marker.lat" [(longitude)]="location.marker.lng" [markerDraggable]="location.marker.draggable"
+        (dragEnd)='markerDragEnd($event)'></agm-marker>
+
+    <agm-circle [latitude]="location.lat" [longitude]="location.lng" [(radius)]="searchAreaRadius" [fillColor]="'purple'"
+        [circleDraggable]="true" [editable]="true" (radiusChange)="onChangeSearchAreaRadius()"></agm-circle>
+</agm-map>
