WC-1 - Add UI changes on the restaurant map page

--- a/cb-web-client/src/app/modules/layouts/customer-layout/customer-layout.component.html
+++ b/cb-web-client/src/app/modules/layouts/customer-layout/customer-layout.component.html
@@ -41,7 +41,7 @@
   </mat-drawer>
   <div class="cb-sidenav-content">
     <div class="cb-toolbar">
-      <mat-toolbar color="secondary">
+      <mat-toolbar color="primary">
         <mat-toolbar-row>
           <div class="notification-panel">
             <i class="material-icons">notifications</i>
@@ -53,5 +53,7 @@
       <router-outlet></router-outlet>
     </div>
   </div>
+
+  <app-footer></app-footer>
 
 </mat-drawer-container>
