--- a/cb-web-client/src/app/modules/pages/restaurant-map/restaurant-map.component.html
+++ b/cb-web-client/src/app/modules/pages/restaurant-map/restaurant-map.component.html
@@ -1,10 +1,33 @@
 <app-map-search-form></app-map-search-form>
 
-<agm-map [(latitude)]="location.lat" [(longitude)]="location.lng" [(zoom)]="location.zoom" [disableDefaultUI]="true"
-    [zoomControl]="true" [(fitBounds)]='location.viewport'>
-    <agm-marker [(latitude)]="location.marker.lat" [(longitude)]="location.marker.lng" [markerDraggable]="location.marker.draggable"
-        (dragEnd)='markerDragEnd($event)'></agm-marker>
-
-    <agm-circle [latitude]="location.lat" [longitude]="location.lng" [(radius)]="searchAreaRadius" [fillColor]="'purple'"
-        [circleDraggable]="true" [editable]="true" (radiusChange)="onChangeSearchAreaRadius()"></agm-circle>
+<agm-map 
+    [(latitude)]="userLocation.lat" 
+    [(longitude)]="userLocation.lng" 
+    [(zoom)]="userLocation.zoom" 
+    [disableDefaultUI]="true"
+    [zoomControl]="true" 
+    [(fitBounds)]='userLocation.viewport'>
+    <agm-marker 
+        [(latitude)]="userLocation.marker.lat" 
+        [(longitude)]="userLocation.marker.lng" 
+        [markerDraggable]="userLocation.marker.draggable"
+        (dragEnd)='markerDragEnd($event)'>
+    </agm-marker>
+    <agm-marker
+        *ngFor="let restaurantLocation of restaurantLocations"
+        [latitude]="restaurantLocation.location.marker.lat"
+        [longitude]="restaurantLocation.location.marker.lng"
+        [iconUrl]="restaurantLocation.location.marker.icon"
+        [title]="restaurantLocation.location.marker.label"
+        (markerClick)="onRestaurantLocationMarkerClick(restaurantLocation)">
+    </agm-marker>
+    <agm-circle 
+        [latitude]="userLocation.lat" 
+        [longitude]="userLocation.lng" 
+        [(radius)]="searchAreaRadius" 
+        [fillColor]="'purple'"
+        [circleDraggable]="true" 
+        [editable]="true" 
+        (radiusChange)="onChangeSearchAreaRadius()">
+    </agm-circle>
 </agm-map>
