WC-1 - Update customer layout structure

--- a/cb-web-client/src/app/modules/layouts/customer-layout/customer-layout.component.html
+++ b/cb-web-client/src/app/modules/layouts/customer-layout/customer-layout.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="cb-sidenav-container" autosize>
 
-  <mat-drawer class="cb-sidenav-menu" mode="side" opened="true" color="primary">
+  <mat-drawer class="cb-sidenav-container__menu" mode="side" opened="true" color="primary">
     <div class="menu-logo">
       <img src="/assets/icons/cb-logo.png">
     </div>
@@ -39,19 +39,18 @@
       </mat-list-item>
     </mat-list>
   </mat-drawer>
-  <div class="cb-sidenav-content">
-    <div class="cb-toolbar">
-      <mat-toolbar color="primary">
-        <mat-toolbar-row>
-          <div class="notification-panel">
-            <i class="material-icons">notifications</i>
-          </div>
-        </mat-toolbar-row>
-      </mat-toolbar>
-    </div>
-    <div class="cb-main-content">
-      <router-outlet></router-outlet>
-    </div>
+    <mat-toolbar color="primary">
+      <mat-toolbar-row class="cb-sidenav-container__toolbar">
+        <div>
+          <i class="material-icons">notifications</i>
+        </div>
+        <div>
+          <i class="material-icons" (click)="onLogoutClick()">exit_to_app</i>
+        </div>
+      </mat-toolbar-row>
+    </mat-toolbar>
+  <div class="cb-sidenav-container__main-content">
+    <router-outlet></router-outlet>
   </div>
 
   <app-footer></app-footer>
