--- a/cb-web-client/src/app/modules/layouts/customer-layout/customer-layout.component.scss
+++ b/cb-web-client/src/app/modules/layouts/customer-layout/customer-layout.component.scss
@@ -1,1 +1,42 @@
+.cb-sidenav-container {
+    height: 100%;
+    width: 100%;
 
+    .cb-sidenav-container__menu {
+        padding: 10px;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    
+        .menu-logo {
+          padding: 10px;
+          img {
+            max-width: 50px;
+            height: auto;
+          }
+        }
+    
+        .menu-item-description {
+          padding-left: 5px;
+        }
+    
+        .menu-details {
+          padding: 20px 0 0 15px;
+        }
+    }
+      
+    .cb-sidenav-container__toolbar {
+        display: flex;
+        justify-content: flex-end;
+    
+        i {
+            cursor: pointer;
+        }
+    }
+      
+    .cb-sidenav-container__main-content {
+        padding: 10px;
+        display: block;
+        background: #eeeeee;
+    }
+}
