--- a/cb-web-client/src/app/modules/components/footer/footer.component.scss
+++ b/cb-web-client/src/app/modules/components/footer/footer.component.scss
@@ -1,7 +1,7 @@
 .cb-footer {
     position: fixed;
     left: 0;
-    bottom: 0;
+    bottom: -3px;
     width: 100%;
     text-align: center;
     color: white;
