WC-3 - Replace restaurant location model with restaurant

--- a/cb-web-client/src/app/modules/pages/restaurant-map/restaurant-map.component.html
+++ b/cb-web-client/src/app/modules/pages/restaurant-map/restaurant-map.component.html
@@ -1,33 +1,36 @@
 <app-map-search-form></app-map-search-form>
 
 <agm-map 
-    [(latitude)]="userLocation.lat" 
+    [(latitude)]="userLocation.lat"
     [(longitude)]="userLocation.lng" 
-    [(zoom)]="userLocation.zoom" 
-    [disableDefaultUI]="true"
+    [(zoom)]="userLocation.zoom"
+    [disableDefaultUI]="true" 
     [zoomControl]="true" 
     [(fitBounds)]='userLocation.viewport'>
+
     <agm-marker 
         [(latitude)]="userLocation.marker.lat" 
         [(longitude)]="userLocation.marker.lng" 
         [markerDraggable]="userLocation.marker.draggable"
         (dragEnd)='markerDragEnd($event)'>
     </agm-marker>
-    <agm-marker
-        *ngFor="let restaurantLocation of restaurantLocations"
-        [latitude]="restaurantLocation.location.marker.lat"
-        [longitude]="restaurantLocation.location.marker.lng"
-        [iconUrl]="restaurantLocation.location.marker.icon"
-        [title]="restaurantLocation.location.marker.label"
-        (markerClick)="onRestaurantLocationMarkerClick(restaurantLocation)">
+
+    <agm-marker *ngFor="let restaurant of restaurants" 
+        [latitude]="restaurant.location.marker.lat"
+        [longitude]="restaurant.location.marker.lng" 
+        [iconUrl]="restaurant.location.marker.icon"
+        [title]="restaurant.location.marker.label" 
+        (markerClick)="onRestaurantLocationMarkerClick(restaurant)">
     </agm-marker>
+
     <agm-circle 
         [latitude]="userLocation.lat" 
         [longitude]="userLocation.lng" 
-        [(radius)]="searchAreaRadius" 
-        [fillColor]="'purple'"
+        [(radius)]="searchAreaRadius"
+        [fillColor]="'purple'" 
         [circleDraggable]="true" 
         [editable]="true" 
         (radiusChange)="onChangeSearchAreaRadius()">
     </agm-circle>
+
 </agm-map>
