--- a/cb-web-client/src/styles.scss
+++ b/cb-web-client/src/styles.scss
@@ -23,15 +23,27 @@ body {
       cursor: pointer;
   
       .menu-logo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         padding: 10px;
         img {
           max-width: 50px;
           height: auto;
         }
+        span {
+          padding: 10px;
+          font-weight: bold;
+          font-size: 20px;
+        }
       }
   
       .menu-item-description {
         padding-left: 5px;
+      }
+
+      .menu-item-description:hover {
+        color: #673ab7;
       }
   
       .menu-details {
@@ -55,3 +67,6 @@ body {
   }
 }
 
+.material-icons:hover {
+  color: #673ab7;
+}
