--- a/cb-web-client/src/styles.scss
+++ b/cb-web-client/src/styles.scss
@@ -15,6 +15,7 @@ body {
 .cb-sidenav-container {
   height: 100%;
   width: 100%;
+  background-color: rgb(238, 238, 238);
 
   .cb-sidenav-container__menu {
       padding: 10px;
@@ -22,7 +23,7 @@ body {
       align-items: center;
       cursor: pointer;
   
-      .menu-logo {
+      .menu__logo {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -38,15 +39,15 @@ body {
         }
       }
   
-      .menu-item-description {
-        padding-left: 5px;
-      }
-
-      .menu-item-description:hover {
+      .menu__option:hover {
         color: #673ab7;
       }
+
+      .menu__option-description {
+        padding-left: 5px;
+      }
   
-      .menu-details {
+      .menu__show-details {
         padding: 20px 0 0 15px;
       }
   }
