WC-4 - Add search event handler for expansion panel in map-search form

--- a/cb-web-client/src/app/modules/components/map-search-form/map-search-form.component.html
+++ b/cb-web-client/src/app/modules/components/map-search-form/map-search-form.component.html
@@ -1,5 +1,5 @@
 <mat-accordion>
-  <mat-expansion-panel>
+  <mat-expansion-panel (click)="searchByLocation()">
     
     <mat-expansion-panel-header>
       <mat-panel-title>Search By Location</mat-panel-title>
