WC-5 - Refactor customer layout component

--- a/cb-web-client/src/app/modules/layouts/customer-layout/customer-layout.component.html
+++ b/cb-web-client/src/app/modules/layouts/customer-layout/customer-layout.component.html
@@ -28,10 +28,7 @@
   </mat-drawer>
     <mat-toolbar color="primary">
       <mat-toolbar-row class="cb-sidenav-container__toolbar">
-        <div>
-          <i class="material-icons">notifications</i>
-        </div>
-        <div>
+        <div class="toolbar__option">
           <i class="material-icons" (click)="onLogoutClick()">exit_to_app</i>
         </div>
       </mat-toolbar-row>
