WC-5 - Refactor imports stuff

--- a/cb-web-client/src/app/modules/pages/restaurant-control/restaurant-control.component.html
+++ b/cb-web-client/src/app/modules/pages/restaurant-control/restaurant-control.component.html
@@ -53,7 +53,8 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onRestaurantClick(row.id)" class="restaurants-table-wrapper__table-row"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+     (click)="onRestaurantClick(row.id)" class="restaurants-table-wrapper__table-row"></tr>
   </table>
 
   <mat-paginator class="restaurants-table-wrapper__paginator" [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons>
